# QTBot

./: .dockerignore  .env.dev_console  .env.prod.example  .gitignore  2026-07-15-144925-qq-pluginswikipy.txt  Dockerfile  Durga.html  Eris.html  README.md  bot.py  bot_dev.py  config.example.ini  conversation-2026-07-06-095916.txt  docker-compose.yml  pyproject.toml  requirements.txt
apps_scripts/: get_characters.js  init_characters.js  save_characters.js
bo/: wiki_instructions.py  wiki_scrape_instructions.py
constants/: message.py
containers/: app_container.py  global_conf.py
data/: .characters.json.last_mtime  character_aliases.json  character_v5.json  character_v5_2.json  characters.json  characters_20260715_092509.json  characters_20260715_093930.json  field_mappings.json  goodness_data.json  main_character.json  main_character_v2.json  main_character_v3.json  main_character_v3_2.json  main_character_v4.json  main_character_v4_2.json  mock_data.json  wiki.db
db/: db_helper.py
entities/: character.py
plugins/: help.py  super.py  wiki.py
runner/: su_runner.py
scripts/: common_translate.py  crawl_data.py  crawl_latest.py  import_character_data.py  import_goodness_data.py  import_mock_data.py  parse_html.py  parse_json.py
services/: character_service.py  google_sheets_service.py  local_json_service.py  qt_wiki_crawler.py  storage_service.py  translation_service.py
tests/: test_1.py  test_build_markdown_content.py  test_character_service.py  test_crawler.py  test_db.py  test_google_sheets_service.py  test_hash_char.py  test_load_characters_from_json.py  (+3 more)
(+5 files in other folders)
